--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1951,7 +1951,232 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# matern kernel random feature\n",
+    "class RFFMaternRegression:\n",
+    "    def __init__(self, rff_dim = 100, matern_dim = 1, matern_length = 1, matern_nu = 1.5, random_state = 0):\n",
+    "        self.rff_dim = rff_dim\n",
+    "        self.matern_dim = matern_dim\n",
+    "        self.matern_length = matern_length\n",
+    "        self.matern_nu = matern_nu\n",
+    "        self.random_state = random_state\n",
+    "        \n",
+    "    def fit(self, X, y):\n",
+    "        self.X = X\n",
+    "        self.y = y\n",
+    "        self.rff = RFF(self.rff_dim, self.matern_dim, self.matern_length, self.matern_variance, self.matern_nu, self.random_state)\n",
+    "        self.rff.fit(X)\n",
+    "        self.ridge = Ridge()\n",
+    "        self.ridge.fit(self.rff.transform(X), y)\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        return self.ridge.predict(self.rff.transform(X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.15631339,  1.12161773,  0.05345182, -0.8323172 ,  0.60706999,\n",
+       "        1.49542683, -0.52552841,  0.25097826,  0.5763303 ,  0.24850275,\n",
+       "       -1.144284  ,  0.90233103, -0.3152712 , -0.11734829,  0.30554967,\n",
+       "       -1.05867531, -0.1080809 , -0.48432949,  0.57682162, -0.00844262,\n",
+       "        1.2325047 , -0.01504663, -0.93165859, -1.06575459,  1.80475619,\n",
+       "        1.63571979, -2.39445718,  1.57407024,  0.81139784, -1.61655664,\n",
+       "       -1.0745496 , -0.69301765, -1.11779306,  1.28362104,  0.71632989,\n",
+       "        2.05730776,  1.59277031,  1.35421753, -1.75504169,  1.33584456,\n",
+       "        1.49900454, -0.45350911, -0.14402756,  0.04575399, -0.4372742 ,\n",
+       "        0.04941655,  1.47897695,  1.23085683, -0.32618343,  0.65796402,\n",
+       "       -1.0022354 ,  0.48810394,  0.54233244,  0.17401705,  0.82261971,\n",
+       "       -0.4008908 ,  0.65540664,  0.25309952, -0.36085071,  0.28468022,\n",
+       "        0.14274241,  0.60081964,  0.85975394,  0.87433745, -0.11240888,\n",
+       "        0.92978308,  1.11119562,  0.70810919, -1.01295666, -1.30807019,\n",
+       "        0.27341028,  0.11106445,  1.04989998, -2.11792513,  0.64814528,\n",
+       "       -0.05293402,  0.5025081 ,  0.15591346, -0.32161618, -1.20557448,\n",
+       "        0.96502006, -0.57436031,  0.66947031,  1.56608192,  0.45122925,\n",
+       "       -0.00313552, -2.11739235,  1.45015872,  0.29108973, -0.68505904,\n",
+       "       -1.0339501 ,  0.50152993, -0.09343777,  0.72900912, -0.67016059,\n",
+       "       -0.83982021, -1.67103057,  0.39218458,  0.14181784,  0.94165963])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.gaussian_process.kernels import Matern, WhiteKernel, RBF, ConstantKernel, ExpSineSquared, RationalQuadratic, DotProduct, PairwiseKernel, Product, Sum\n",
+    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "import numpy as np\n",
+    "class MaternRegression:\n",
+    "    def __init__(self, matern_dim = 1, matern_length = 1, matern_nu = 1.5):\n",
+    "        self.matern_dim = matern_dim\n",
+    "        self.matern_length = matern_length\n",
+    "        self.matern_nu = matern_nu\n",
+    "    def fit(self, X, y):\n",
+    "        self.X = X\n",
+    "        self.y = y\n",
+    "        self.kernel = Matern(length_scale = self.matern_length, nu = self.matern_nu)\n",
+    "        self.gpr = GaussianProcessRegressor(kernel = self.kernel, random_state = 0).fit(X, y)\n",
+    "    def predict(self, X):\n",
+    "        return self.gpr.predict(X)\n",
+    "    \n",
+    "class GuassianRegression:\n",
+    "    def __init__(self, sigma = 1):\n",
+    "        self.sigma = sigma\n",
+    "    def fit(self, X, y):\n",
+    "        self.X = X\n",
+    "        self.y = y\n",
+    "        self.kernel = RBF(length_scale = self.sigma)\n",
+    "        self.gpr = GaussianProcessRegressor(kernel = self.kernel, random_state = 0).fit(X, y)\n",
+    "        \n",
+    "    def predict(self, X):\n",
+    "        return self.gpr.predict(X)\n",
+    "\n",
+    "\n",
+    "class LaplacianRegression:\n",
+    "    def __init__(self, sigma = 1):\n",
+    "        self.sigma = sigma\n",
+    "    def fit(self, X, y):\n",
+    "        self.X = X\n",
+    "        self.y = y\n",
+    "        self.kernel = PairwiseKernel(metric = 'laplacian')\n",
+    "        self.gpr = GaussianProcessRegressor(kernel = self.kernel, random_state = 0).fit(X, y)\n",
+    "    def predict(self, X):\n",
+    "        return self.gpr.predict(X)\n",
+    "    \n",
+    "\n",
+    "#test the model with simple data\n",
+    "X = np.random.normal(size = (100, 10))\n",
+    "y = np.random.normal(size = 100)\n",
+    "\n",
+    "matern = MaternRegression()\n",
+    "matern.fit(X, y)\n",
+    "matern.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.15631339,  1.12161773,  0.05345182, -0.8323172 ,  0.60706999,\n",
+       "        1.49542683, -0.52552841,  0.25097826,  0.5763303 ,  0.24850275,\n",
+       "       -1.144284  ,  0.90233103, -0.3152712 , -0.11734829,  0.30554967,\n",
+       "       -1.05867531, -0.1080809 , -0.48432949,  0.57682162, -0.00844262,\n",
+       "        1.2325047 , -0.01504663, -0.93165859, -1.06575459,  1.80475619,\n",
+       "        1.63571979, -2.39445718,  1.57407024,  0.81139784, -1.61655664,\n",
+       "       -1.0745496 , -0.69301765, -1.11779306,  1.28362104,  0.71632989,\n",
+       "        2.05730776,  1.59277031,  1.35421753, -1.75504169,  1.33584456,\n",
+       "        1.49900454, -0.45350911, -0.14402756,  0.04575399, -0.4372742 ,\n",
+       "        0.04941655,  1.47897695,  1.23085683, -0.32618343,  0.65796402,\n",
+       "       -1.0022354 ,  0.48810394,  0.54233244,  0.17401705,  0.82261971,\n",
+       "       -0.4008908 ,  0.65540664,  0.25309952, -0.36085071,  0.28468022,\n",
+       "        0.14274241,  0.60081964,  0.85975394,  0.87433745, -0.11240888,\n",
+       "        0.92978308,  1.11119562,  0.70810919, -1.01295666, -1.30807019,\n",
+       "        0.27341028,  0.11106445,  1.04989998, -2.11792513,  0.64814528,\n",
+       "       -0.05293402,  0.5025081 ,  0.15591346, -0.32161618, -1.20557448,\n",
+       "        0.96502006, -0.57436031,  0.66947031,  1.56608192,  0.45122925,\n",
+       "       -0.00313552, -2.11739235,  1.45015872,  0.29108973, -0.68505904,\n",
+       "       -1.0339501 ,  0.50152993, -0.09343777,  0.72900912, -0.67016059,\n",
+       "       -0.83982021, -1.67103057,  0.39218458,  0.14181784,  0.94165963])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gaussian = GuassianRegression()\n",
+    "gaussian.fit(X, y)\n",
+    "gaussian.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.15631339,  1.12161773,  0.05345182, -0.8323172 ,  0.60706999,\n",
+       "        1.49542683, -0.52552841,  0.25097826,  0.5763303 ,  0.24850275,\n",
+       "       -1.144284  ,  0.90233103, -0.3152712 , -0.11734829,  0.30554967,\n",
+       "       -1.05867531, -0.1080809 , -0.48432949,  0.57682162, -0.00844262,\n",
+       "        1.2325047 , -0.01504663, -0.93165859, -1.06575459,  1.80475619,\n",
+       "        1.63571979, -2.39445718,  1.57407024,  0.81139784, -1.61655664,\n",
+       "       -1.0745496 , -0.69301765, -1.11779306,  1.28362104,  0.71632989,\n",
+       "        2.05730776,  1.59277031,  1.35421753, -1.75504169,  1.33584456,\n",
+       "        1.49900454, -0.45350911, -0.14402756,  0.04575399, -0.4372742 ,\n",
+       "        0.04941655,  1.47897695,  1.23085683, -0.32618343,  0.65796402,\n",
+       "       -1.0022354 ,  0.48810394,  0.54233244,  0.17401705,  0.82261971,\n",
+       "       -0.4008908 ,  0.65540664,  0.25309952, -0.36085071,  0.28468022,\n",
+       "        0.14274241,  0.60081964,  0.85975394,  0.87433745, -0.11240888,\n",
+       "        0.92978308,  1.11119562,  0.70810919, -1.01295666, -1.30807019,\n",
+       "        0.27341028,  0.11106445,  1.04989998, -2.11792513,  0.64814528,\n",
+       "       -0.05293402,  0.5025081 ,  0.15591346, -0.32161618, -1.20557448,\n",
+       "        0.96502006, -0.57436031,  0.66947031,  1.56608192,  0.45122925,\n",
+       "       -0.00313552, -2.11739235,  1.45015872,  0.29108973, -0.68505904,\n",
+       "       -1.0339501 ,  0.50152993, -0.09343777,  0.72900912, -0.67016059,\n",
+       "       -0.83982021, -1.67103057,  0.39218458,  0.14181784,  0.94165963])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Laplacian = LaplacianRegression()\n",
+    "Laplacian.fit(X, y)\n",
+    "Laplacian.predict(X) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from features sample num samples, x is the feature, y is the corresponding target from target['target_60']\n",
+    "#generate the training data and test data from samples\n",
+    "#try different models with the features and target and return the score of each model and the correlation between predictions\n",
+    "def generate_samples(features, target, num):\n",
+    "    #features is a pd.DataFrame\n",
+    "    #target is a pd.DataFrame\n",
+    "    #num is the number of samples\n",
+    "    #return the samples\n",
+    "\n",
+    "    x = features.sample(num)\n",
+    "    y = target['target_60'].loc[x.index]\n",
+    "    #split the data into training data and test data\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2)\n",
+    "    return x_train, x_test, y_train, y_test\n",
+    "\n",
+    "def trymodels(features, target, num, models):\n",
+    "    #features is a pd.DataFrame\n",
+    "    #target is a pd.DataFrame\n",
+    "    #num is the number of samples\n",
+    "    #model is the model to try\n",
+    "    #times is the number of times to try\n",
+    "    #return the score of each model and the correlation between predictions\n",
+    "    scores = []\n",
+    "    correlations = []\n",
+    "    for i in models\n",
+    "        x, y = generate_samples(features, target, num)\n",
+    "        model.fit(x, y)\n",
+    "        scores.append(model.score(x, y))\n",
+    "        correlations.append(np.corrcoef(model\n"
+   ]
   }
  ],
  "metadata": {
