--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2160,23 +2160,259 @@
     "    y = target['target_60'].loc[x.index]\n",
     "    #split the data into training data and test data\n",
     "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2)\n",
-    "    return x_train, x_test, y_train, y_test\n",
-    "\n",
-    "def trymodels(features, target, num, models):\n",
-    "    #features is a pd.DataFrame\n",
-    "    #target is a pd.DataFrame\n",
-    "    #num is the number of samples\n",
-    "    #model is the model to try\n",
-    "    #times is the number of times to try\n",
-    "    #return the score of each model and the correlation between predictions\n",
-    "    scores = []\n",
-    "    correlations = []\n",
-    "    for i in models\n",
-    "        x, y = generate_samples(features, target, num)\n",
-    "        model.fit(x, y)\n",
-    "        scores.append(model.score(x, y))\n",
-    "        correlations.append(np.corrcoef(model\n"
+    "    return x_train, x_test, y_train, y_test\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def nystroem_approximation(X, k, kernel_function):\n",
+    "    \n",
+    "    random_sample_indices = np.random.choice(X.shape[0], size=k)\n",
+    "    \n",
+    "    C = kernel_function(X, X[random_sample_indices])\n",
+    "    \n",
+    "    W = C[random_sample_indices]\n",
+    "    \n",
+    "    return C, np.linalg.pinv(W)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.linalg import svd\n",
+    "\n",
+    "from sklearn.kernel_approximation import pairwise_kernels\n",
+    "\n",
+    "gamma = 1/( 2*X.var() )\n",
+    "\n",
+    "rbf_kernel = lambda A,B : pairwise_kernels(A, B, metric=\"rbf\", gamma=gamma)\n",
+    "\n",
+    "def nystroem_transformation(X, k, kernel_function):\n",
+    "    \n",
+    "    random_sample_indices = np.random.choice(X.shape[0], k)\n",
+    "    \n",
+    "    C = kernel_function(X, X[random_sample_indices])\n",
+    "    \n",
+    "    W = C[random_sample_indices]\n",
+    "       \n",
+    "    # Calculating mapping_matrix = W^(-1/2)\n",
+    "    U, S, V = svd(W)\n",
+    "    mapping_matrix = np.linalg.pinv( U * np.sqrt(S) @ V ).T\n",
+    "    \n",
+    "    return C @ mapping_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpairwise\u001b[39;00m \u001b[39mimport\u001b[39;00m KERNEL_PARAMS\n\u001b[1;32m     12\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlinalg\u001b[39;00m \u001b[39mimport\u001b[39;00m svd  \u001b[39m# TODO: Use dask's?\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m check_array\n\u001b[1;32m     15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpairwise\u001b[39;00m \u001b[39mimport\u001b[39;00m pairwise_kernels\n\u001b[1;32m     18\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mNystroem\u001b[39;00m(BaseEstimator, TransformerMixin):\n",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Implements approximate kernel methods.\n",
+    "\"\"\"\n",
+    "import warnings\n",
+    "\n",
+    "import numpy as np\n",
+    "import dask.array as da\n",
+    "from dask import compute, persist\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.utils.validation import check_random_state, check_is_fitted\n",
+    "from sklearn.metrics.pairwise import KERNEL_PARAMS\n",
+    "from scipy.linalg import svd  # TODO: Use dask's?\n",
+    "\n",
+    "from .utils import check_array\n",
+    "from .metrics.pairwise import pairwise_kernels\n",
+    "\n",
+    "\n",
+    "class Nystroem(BaseEstimator, TransformerMixin):\n",
+    "    \"\"\"Approximate a kernel map using a subset of the training data.\n",
+    "    Constructs an approximate feature map for an arbitrary kernel\n",
+    "    using a subset of the data as basis.\n",
+    "    Read more in the :ref:`User Guide <nystroem_kernel_approx>`.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    kernel : string or callable, default=\"rbf\"\n",
+    "        Kernel map to be approximated. A callable should accept two arguments\n",
+    "        and the keyword arguments passed to this object as kernel_params, and\n",
+    "        should return a floating point number.\n",
+    "    n_components : int\n",
+    "        Number of features to construct.\n",
+    "        How many data points will be used to construct the mapping.\n",
+    "    gamma : float, default=None\n",
+    "        Gamma parameter for the RBF, laplacian, polynomial, exponential chi2\n",
+    "        and sigmoid kernels. Interpretation of the default value is left to\n",
+    "        the kernel; see the documentation for sklearn.metrics.pairwise.\n",
+    "        Ignored by other kernels.\n",
+    "    degree : float, default=None\n",
+    "        Degree of the polynomial kernel. Ignored by other kernels.\n",
+    "    coef0 : float, default=None\n",
+    "        Zero coefficient for polynomial and sigmoid kernels.\n",
+    "        Ignored by other kernels.\n",
+    "    kernel_params : mapping of string to any, optional\n",
+    "        Additional parameters (keyword arguments) for kernel function passed\n",
+    "        as callable object.\n",
+    "    random_state : int, RandomState instance or None, optional (default=None)\n",
+    "        If int, random_state is the seed used by the random number generator;\n",
+    "        If RandomState instance, random_state is the random number generator;\n",
+    "        If None, the random number generator is the RandomState instance used\n",
+    "        by `np.random`.\n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    components_ : array, shape (n_components, n_features)\n",
+    "        Subset of training points used to construct the feature map.\n",
+    "    component_indices_ : array, shape (n_components)\n",
+    "        Indices of ``components_`` in the training set.\n",
+    "    normalization_ : array, shape (n_components, n_components)\n",
+    "        Normalization matrix needed for embedding.\n",
+    "        Square root of the kernel matrix on ``components_``.\n",
+    "    References\n",
+    "    ----------\n",
+    "    * Williams, C.K.I. and Seeger, M.\n",
+    "      \"Using the Nystroem method to speed up kernel machines\",\n",
+    "      Advances in neural information processing systems 2001\n",
+    "      http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.18.7519\n",
+    "    * T. Yang, Y. Li, M. Mahdavi, R. Jin and Z. Zhou\n",
+    "      \"Nystroem Method vs Random Fourier Features: A Theoretical and Empirical\n",
+    "      Comparison\",\n",
+    "      Advances in Neural Information Processing Systems 2012\n",
+    "    * Fowlkes, Belongie, Chung, and Malik\n",
+    "      \"Spectral Grouping Using the Nyström Method\"\n",
+    "      IEEE Transactions On Pattern Analysis And Machine Intelligence,\n",
+    "      vol. 26, no. 2\n",
+    "      https://people.eecs.berkeley.edu/~malik/papers/FBCM-nystrom.pdf\n",
+    "    See also\n",
+    "    --------\n",
+    "    dask_ml.metrics.pairwise.kernel_metrics : List of built-in kernels.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, kernel=\"rbf\", gamma=None, coef0=None, degree=None,\n",
+    "                 kernel_params=None, n_components=100, random_state=None):\n",
+    "        self.kernel = kernel\n",
+    "        self.gamma = gamma\n",
+    "        self.coef0 = coef0\n",
+    "        self.degree = degree\n",
+    "        self.kernel_params = kernel_params\n",
+    "        self.n_components = n_components\n",
+    "        self.random_state = random_state\n",
+    "\n",
+    "\n",
+    "    def fit(self, X, y=None):\n",
+    "        \"\"\"Fit estimator to data.\n",
+    "        Samples a subset of training points, computes kernel\n",
+    "        on these and computes normalization matrix.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        X : array-like, shape=(n_samples, n_feature)\n",
+    "            Training data.\n",
+    "        \"\"\"\n",
+    "        rnd = check_random_state(self.random_state)\n",
+    "        n_samples = X.shape[0]\n",
+    "\n",
+    "        # get basis vectors\n",
+    "        if self.n_components > n_samples:\n",
+    "            # XXX should we just bail?\n",
+    "            n_components = n_samples\n",
+    "            warnings.warn(\"n_components > n_samples. This is not possible.\\n\"\n",
+    "                          \"n_components was set to n_samples, which results\"\n",
+    "                          \" in inefficient evaluation of the full kernel.\")\n",
+    "\n",
+    "        else:\n",
+    "            n_components = self.n_components\n",
+    "        n_components = min(n_samples, n_components)\n",
+    "        inds = rnd.permutation(n_samples)\n",
+    "        basis_inds = inds[:n_components]\n",
+    "\n",
+    "        # basis is [n_components, n_features]\n",
+    "        basis = X[basis_inds]\n",
+    "\n",
+    "        # TODO: think about this.\n",
+    "        # basis is a learned parameter, so we want it to be concrete\n",
+    "        # pairwise_kernels is faster on dask arrays though\n",
+    "        # so we persist it, and then compute it later.\n",
+    "        # Also, are we sure that basis will fit in memory? That's\n",
+    "        # the point of Nystrom, but we should make sure\n",
+    "        basis, = persist(basis)\n",
+    "\n",
+    "        # [n_components, n_components]\n",
+    "        basis_kernel = pairwise_kernels(basis, metric=self.kernel,\n",
+    "                                        filter_params=True,\n",
+    "                                        **self._get_kernel_params())\n",
+    "\n",
+    "        # sqrt of kernel matrix on basis vectors\n",
+    "        U, S, V = svd(basis_kernel)\n",
+    "        S = np.maximum(S, 1e-12)\n",
+    "        self.normalization_ = np.dot(U / np.sqrt(S), V)\n",
+    "        self.components_, = compute(basis)\n",
+    "        self.component_indices_ = inds\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        \"\"\"Apply feature map to X.\n",
+    "        Computes an approximate feature map using the kernel\n",
+    "        between some training points and X.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        X : array-like, shape=(n_samples, n_features)\n",
+    "            Data to transform.\n",
+    "        Returns\n",
+    "        -------\n",
+    "        X_transformed : array, shape=(n_samples, n_components)\n",
+    "            Transformed data.\n",
+    "        \"\"\"\n",
+    "        check_is_fitted(self, 'components_')\n",
+    "\n",
+    "        kernel_params = self._get_kernel_params()\n",
+    "        embedded = pairwise_kernels(X, self.components_,\n",
+    "                                    metric=self.kernel,\n",
+    "                                    filter_params=True,\n",
+    "                                    **kernel_params)\n",
+    "        return da.dot(embedded, self.normalization_.T)\n",
+    "\n",
+    "    def _get_kernel_params(self):\n",
+    "        params = self.kernel_params\n",
+    "        if params is None:\n",
+    "            params = {}\n",
+    "        if not callable(self.kernel):\n",
+    "            for param in (KERNEL_PARAMS[self.kernel]):\n",
+    "                if getattr(self, param) is not None:\n",
+    "                    params[param] = getattr(self, param)\n",
+    "        else:\n",
+    "            if (self.gamma is not None or\n",
+    "                    self.coef0 is not None or\n",
+    "                    self.degree is not None):\n",
+    "                raise ValueError(\"Passing gamma, coef0 or degree to Nystroem \"\n",
+    "                                 \"when using a callable kernel is not \"\n",
+    "                                 \"supported\")\n",
+    "        return params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
