--- a/Large_Scale_SVM.ipynb
+++ b/Large_Scale_SVM.ipynb
@@ -409,7 +409,7 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics.pairwise import rbf_kernel\n",
-    "from sklearn.gaussian_process.kernels import Matern, WhiteKernel, RBF, ConstantKernel, ExpSineSquared, RationalQuadratic, DotProduct, PairwiseKernel, Product, Sum\n",
+    "from sklearn.gaussian_process.kernels import Matern, WhiteKernel, RBF, ConstantKernel, ExpSineSquared, RationalQuadratic, DotProduct, PairwiseKernel, Product, Sum, \n",
     "\n",
     "def nystrom(X_train, X_test, gamma, c=500, k=200, seed=44):\n",
     "\n",
@@ -637,6 +637,50 @@
     "ax2.legend(loc='lower right')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'PolynomialKernel' from 'sklearn.metrics.pairwise' (/opt/homebrew/anaconda3/lib/python3.10/site-packages/sklearn/metrics/pairwise.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#ploynomial kernel\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpairwise\u001b[39;00m \u001b[39mimport\u001b[39;00m PolynomialKernel\n\u001b[1;32m      3\u001b[0m \u001b[39m#different kernels\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m#rbf_kernel\u001b[39;00m\n\u001b[1;32m      5\u001b[0m gaussian_kernel \u001b[39m=\u001b[39m RBF(length_scale\u001b[39m=\u001b[39m\u001b[39m1.0\u001b[39m)\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'PolynomialKernel' from 'sklearn.metrics.pairwise' (/opt/homebrew/anaconda3/lib/python3.10/site-packages/sklearn/metrics/pairwise.py)"
+     ]
+    }
+   ],
+   "source": [
+    "#ploynomial kernel\n",
+    "from sklearn.metrics.pairwise import polynomial_kernel, sigmoid_kernel\n",
+    "#different kernels\n",
+    "#rbf_kernel\n",
+    "gaussian_kernel = RBF(length_scale=1.0)\n",
+    "#matern_kernel\n",
+    "matern_kernel = Matern(length_scale=1.0, nu=1.5)\n",
+    "#laplacian_kernel\n",
+    "laplacian_kernel = PairwiseKernel(metric='laplacian',pairwise_kernels_kwargs={'gamma':1.0})\n",
+    "#polynomial_kernel\n",
+    "polynomial_kernel =PairwiseKernel(metric='polynomial',pairwise_kernels_kwargs={'degree':3.0})\n",
+    "#sigmoid_kernel\n",
+    "sigmoid_kernel = PairwiseKernel(metric='sigmoid')\n",
+    "#t-student kernel\n",
+    "def t_student_kernel(X, Y):\n",
+    "    \n",
+    "    dis = np.sum((X-Y) ** X.shape[1])\n",
+    "    return 1/(1+dis)\n",
+    "#cauchy kernel\n",
+    "def cauchy_kernel(X, Y, sigma=1.0):\n",
+    "        \n",
+    "        dis = np.sum((X-Y) ** 2)\n",
+    "        return 1/(1+dis/sigma\n",
+    "\n"
    ]
   }
  ],
