--- a/Large_Scale_SVM.ipynb
+++ b/Large_Scale_SVM.ipynb
@@ -641,18 +641,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'PolynomialKernel' from 'sklearn.metrics.pairwise' (/opt/homebrew/anaconda3/lib/python3.10/site-packages/sklearn/metrics/pairwise.py)",
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (2605495999.py, line 24)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[28], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#ploynomial kernel\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpairwise\u001b[39;00m \u001b[39mimport\u001b[39;00m PolynomialKernel\n\u001b[1;32m      3\u001b[0m \u001b[39m#different kernels\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m#rbf_kernel\u001b[39;00m\n\u001b[1;32m      5\u001b[0m gaussian_kernel \u001b[39m=\u001b[39m RBF(length_scale\u001b[39m=\u001b[39m\u001b[39m1.0\u001b[39m)\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'PolynomialKernel' from 'sklearn.metrics.pairwise' (/opt/homebrew/anaconda3/lib/python3.10/site-packages/sklearn/metrics/pairwise.py)"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[29], line 24\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
      ]
     }
    ],
@@ -679,7 +676,8 @@
     "def cauchy_kernel(X, Y, sigma=1.0):\n",
     "        \n",
     "        dis = np.sum((X-Y) ** 2)\n",
-    "        return 1/(1+dis/sigma\n",
+    "        return 1/(1+dis/sigma)\n",
+    "kernels = [gaussian_kernel, matern_kernel, laplacian_kernel, polynomial_kernel, sigmoid_kernel, t_student_kernel, cauchy_kernel]\n",
     "\n"
    ]
   }
