--- a/Large_Scale_SVM.ipynb
+++ b/Large_Scale_SVM.ipynb
@@ -641,18 +641,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (2605495999.py, line 24)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[29], line 24\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#ploynomial kernel\n",
     "from sklearn.metrics.pairwise import polynomial_kernel, sigmoid_kernel\n",
@@ -679,6 +670,69 @@
     "        return 1/(1+dis/sigma)\n",
     "kernels = [gaussian_kernel, matern_kernel, laplacian_kernel, polynomial_kernel, sigmoid_kernel, t_student_kernel, cauchy_kernel]\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Nystorm_Kernel:\n",
+    "    \n",
+    "    def __init__(self, kernel, c=500, k=300, seed=42, alpha=1.0):\n",
+    "        \n",
+    "        self.kernel = kernel\n",
+    "        self.c = c\n",
+    "        self.k = k\n",
+    "        self.seed = seed\n",
+    "        self.fitted = False\n",
+    "        self.X_idx = None\n",
+    "        self.M = None\n",
+    "        self.lm = Ridge(alpha=alpha)\n",
+    "        \n",
+    "    def fit(self, X,y):\n",
+    "    \n",
+    "        X_idx = X.sample(self.c, random_state=self.seed)\n",
+    "        \n",
+    "        #W = rbf_kernel(X_idx, X_idx, gamma=gamma)\n",
+    "        #matern kernel\n",
+    "        W = self.kernel(X_idx, X_idx)\n",
+    "    \n",
+    "        u, s, vt = linalg.svd(W, full_matrices=False)\n",
+    "    \n",
+    "        u = u[:,:self.k]\n",
+    "        s = s[:self.k]\n",
+    "        vt = vt[:self.k, :]\n",
+    "    \n",
+    "        M = np.dot(u, np.diag(1/np.sqrt(s)))\n",
+    "        \n",
+    "        self.X_idx = X_idx\n",
+    "        self.M = M\n",
+    "        self.fitted = True\n",
+    "        Z_train = self.transform(X)\n",
+    "        self.lm.fit(Z_train, y)\n",
+    "    \n",
+    "    def transform(self, X):\n",
+    "        \n",
+    "        if not self.fitted:\n",
+    "            msg = \"Call 'fit' with appropriate arguments first.\"\n",
+    "            raise NotFittedError(msg)\n",
+    "        \n",
+    "        C = self.kernel(X, self.X_idx)\n",
+    "        Z = np.dot(C, self.M)\n",
+    "\n",
+    "        return Z\n",
+    "    \n",
+    "    def predict(self, X):\n",
+    "            \n",
+    "            if not self.fitted:\n",
+    "                msg = \"Call 'fit' with appropriate arguments first.\"\n",
+    "                raise NotFittedError(msg)\n",
+    "            \n",
+    "            Z = self.transform(X)\n",
+    "            \n",
+    "            return self.lm.predict(Z)"
    ]
   }
  ],
