--- a/Large_Scale_SVM.ipynb
+++ b/Large_Scale_SVM.ipynb
@@ -734,6 +734,64 @@
     "            \n",
     "            return self.lm.predict(Z)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.array([[1,2,3],[4,5,6]])\n",
+    "a[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 4])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#the 0th column of a\n",
+    "a[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save final, beta and name_orders\n",
+    "with open('final.pkl', 'w') as f:\n",
+    "    pickle.dump(final, f)\n",
+    "with open('beta.pkl', 'w') as f:\n",
+    "    pickle.dump(beta, f)\n",
+    "with open('name_orders.pkl', 'w') as f:\n",
+    "    pickle.dump(name_orders, f)"
+   ]
   }
  ],
  "metadata": {
