--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy"
+    "import numpy as np"
    ]
   },
   {
@@ -2242,7 +2242,6 @@
     "from sklearn.metrics.pairwise import KERNEL_PARAMS\n",
     "from scipy.linalg import svd  # TODO: Use dask's?\n",
     "\n",
-    "from .utils import check_array\n",
     "from .metrics.pairwise import pairwise_kernels\n",
     "\n",
     "\n",
@@ -2409,10 +2408,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# construct the EMA within everyday with DD data\n",
+    "\n",
+    "def EMA(data, kernel_function):\n",
+    "    #data is a pd.DataFrame, with DD.ret and DD.vol\n",
+    "    #return the EMA of the data\n",
+    "    #the EMA is the EMA of the DD.ret with the kernel_function\n",
+    "\n",
+    "    EMA = np.zeros(len(data))\n",
+    "    EMA[0] = data['DD.ret'].iloc[0]\n",
+    "    for i in range(1, len(data)):\n",
+    "        for j in range(i):\n",
+    "            EMA[i] += kernel_function(i-j) * data['DD.ret'].iloc[j]\n",
+    "    return EMA\n",
+    "\n",
+    "#construct the EMA within everyday with DD data, with the kernel function gaussian kernel, laplacian kernel\n",
+    "\n",
+    "kernels = {}\n",
+    "kernels['gaussian'] = lambda x: np.exp(-x ** 2)\n",
+    "kernels['laplacian'] = lambda x: np.exp(-np.abs(x))\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
