--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2420,12 +2420,16 @@
     "    #data is a pd.DataFrame, with DD.ret and DD.vol\n",
     "    #return the EMA of the data\n",
     "    #the EMA is the EMA of the DD.ret with the kernel_function\n",
+    "    #then normalize the EMA\n",
     "\n",
     "    EMA = np.zeros(len(data))\n",
     "    EMA[0] = data['DD.ret'].iloc[0]\n",
+    "    normalization = 0\n",
     "    for i in range(1, len(data)):\n",
     "        for j in range(i):\n",
     "            EMA[i] += kernel_function(i-j) * data['DD.ret'].iloc[j]\n",
+    "            normalization += kernel_function(i-j)\n",
+    "        EMA[i] /= normalization\n",
     "    return EMA\n",
     "\n",
     "#construct the EMA within everyday with DD data, with the kernel function gaussian kernel, laplacian kernel\n",
@@ -2433,7 +2437,8 @@
     "kernels = {}\n",
     "kernels['gaussian'] = lambda x: np.exp(-x ** 2)\n",
     "kernels['laplacian'] = lambda x: np.exp(-np.abs(x))\n",
-    "\n",
+    "kernels['sigmoid'] = lambda x: np.tanh(x)\n",
+    "kernels['cauchy'] = lambda x: 1 / (1 + x ** 2)\n",
     "\n",
     "\n"
    ]
