--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2742,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2763,7 +2763,7 @@
     "        table['y'] = y\n",
     "        #descretize the X get the mean of the corresponding Y\n",
     "        #bin the X into 100 bins of equal length for each dimension\n",
-    "        for i in range(self.n):\n",
+    "        for i in range(n):\n",
     "            table['X' + str(i) + '_bin'], bins = pd.cut(table['X' + str(i)], self.bins, retbins = True)\n",
     "            self.bin_x.append(bins)\n",
     "        #group by the X_bin and get the mean of the corresponding Y\n",
@@ -2800,6 +2800,59 @@
     "        #the prediction of the sample_x\n",
     "        prediction = self.denoised[tuple(index)]\n",
     "        return prediction\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test the FFTdenoise by train test split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X = np.random.normal(size = (100000, 3))\n",
+    "y = X.sum(axis = 1) + np.random.normal(size = 100000)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)\n",
+    "model = FFTdenoise()\n",
+    "model.fit(X_train, y_train)\n",
+    "pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6093156416105298"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correlation(pred, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cross validation split\n",
+    "from sklearn.model_selection import KFold\n",
+    "kf = KFold(n_splits = 5)\n",
+    "correlation_list = []\n",
+    "for train_index, test_index in kf.split(X):\n",
+    "    model = FFTdenoise()\n",
+    "    model.fit(X[train_index], y[train_index])\n",
+    "    pred = model.predict(X[test_index])\n",
+    "    correlation_list.append(correlation(pred, y[test_index]))"
    ]
   }
  ],
