--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2854,6 +2854,36 @@
     "    pred = model.predict(X[test_index])\n",
     "    correlation_list.append(correlation(pred, y[test_index]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.60845421, 0.44821113, 0.67559181, 1.25481047, 0.63029898,\n",
+       "       0.22436459, 0.67647566, 0.11479522, 0.59864232, 0.41731908])"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#gausian kernel regression\n",
+    "from sklearn.kernel_ridge import KernelRidge\n",
+    "import numpy as np\n",
+    "n_samples, n_features = 10, 5\n",
+    "rng = np.random.RandomState(0)\n",
+    "y = rng.randn(n_samples)\n",
+    "X = rng.randn(n_samples, n_features)\n",
+    "clf = KernelRidge(kernel='rbf', gamma=0.1)\n",
+    "clf.fit(X, y)\n",
+    "clf.predict(X)\n"
+   ]
   }
  ],
  "metadata": {
