--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2884,6 +2884,42 @@
     "clf.fit(X, y)\n",
     "clf.predict(X)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#normalize the data by the mean and std of the previous month\n",
+    "#the data is the pd.DataFrame with the columns of msymbol_ukey, date, interval and all the features\n",
+    "#each row is a minute data\n",
+    "def normalize(data):\n",
+    "    #data is a pd.DataFrame\n",
+    "    #return the normalized data\n",
+    "    #the normalization is the normalization of the data by the mean and std of the previous month\n",
+    "    \n",
+    "    #create a rolling window of 30 days\n",
+    "    window = 30\n",
+    "    daily_mean  = {}\n",
+    "    daily_std = {}\n",
+    "    for day in dates:\n",
+    "        #if day is not in the data, then continue\n",
+    "        if day not in data['date'].unique():\n",
+    "            continue\n",
+    "        daily_mean[day] = data[data['date'] == day].mean()\n",
+    "        daily_std[day] = data[data['date'] == day].std()\n",
+    "    #normalize the data by the mean and std of the previous month\n",
+    "    for day in dates:\n",
+    "        previous_month = dates[dates.index(day) - window: dates.index(day)]\n",
+    "        #mean and std of the previous month\n",
+    "        #ignore the days that are not in the data\n",
+    "        mean = np.mean([daily_mean[i] for i in previous_month if i in daily_mean])\n",
+    "        std = np.mean([daily_std[i] for i in previous_month if i in daily_std])\n",
+    "        #normalize the data\n",
+    "        data[data['date'] == day] = (data[data['date'] == day] - mean) / std\n",
+    "    return data"
+   ]
   }
  ],
  "metadata": {
