--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -333,6 +333,15 @@
     "        x = (x - self.mean) / self.std\n",
     "        return x\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MLP(input_len=120, input_dim=74 * 4, hidden_size=128, layer_num=2, dropout=0.5)"
+   ]
   }
  ],
  "metadata": {
