--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -306,9 +306,13 @@
     "        self.layer_num = layer_num\n",
     "        self.dropout = dropout\n",
     "        #embedding\n",
-    "        self.embedding = nn.Linear(self.input_dim, self.hidden_size)\n",
-    "        self.linears = nn.ModuleList([nn.Linear(self.hidden_size, self.hidden_size) for i in range(self.layer_num)])\n",
-    "        self.norms = nn.ModuleList([nn.BatchNorm1d(self.input_len) for i in range(self.layer_num)])\n",
+    "        self.linears = nn.ModuleList([nn.Linear(self.input_dim, self.hidden_size)])\n",
+    "        self.norms = nn.ModuleList([nn.BatchNorm1d(self.input_len)])\n",
+    "\n",
+    "        for i in range(self.layer_num - 1):\n",
+    "            self.linears.append(nn.Linear(self.hidden_size, self.hidden_size))\n",
+    "            self.norms.append(nn.BatchNorm1d(self.input_len))\n",
+    "\n",
     "        self.out = nn.Linear(self.hidden_size * self.input_len, 74)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        self.init_weights()\n",
@@ -323,11 +327,13 @@
     "    def forward(self, x):\n",
     "        #forward pass\n",
     "        bs = x.size(0)\n",
-    "        x = self.embedding(x)\n",
+    "\n",
     "        for i in range(self.layer_num):\n",
     "            x = self.linears[i](x)\n",
     "            x = self.norms[i](x)\n",
     "            x = self.dropout(x)\n",
+    "            x = F.relu(x)\n",
+    "\n",
     "        x = x.view(bs, -1)\n",
     "        x = self.out(x)\n",
     "        x = (x - self.mean) / self.std\n",
