--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -567,18 +567,52 @@
     "X = X.numpy()\n",
     "Y = Y.numpy()\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=0)\n",
-    "regr = RandomForestRegressor(max_depth=2, random_state=0, n_estimators=100)\n",
-    "regr.fit(X_train, y_train)\n",
-    "y_pred = regr.predict(X_test)\n",
-    "print(mean_squared_error(y_test, y_pred))\n"
+    "#multiprocessing\n",
+    "rf = RandomForestRegressor(n_estimators=100, max_depth=10, random_state=0, n_jobs=-1)\n",
+    "rf.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/anaconda3/lib/python3.10/site-packages/sklearn/utils/validation.py:1143: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.23"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#linear classifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import numpy as np\n",
+    "\n",
+    "X = torch.randn(num_samples, 4 * 74)\n",
+    "# 4 classes\n",
+    "Y = torch.randint(0, 4, (num_samples, 1))\n",
+    "X = X.numpy()\n",
+    "Y = Y.numpy()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=0)\n",
+    "clf = LogisticRegression(random_state=0).fit(X_train, y_train)\n",
+    "clf.score(X_test, y_test)\n"
+   ]
   }
  ],
  "metadata": {
