--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -598,7 +598,7 @@
    ],
    "source": [
     "#linear classifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
     "from sklearn.datasets import make_classification\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
@@ -610,9 +610,53 @@
     "X = X.numpy()\n",
     "Y = Y.numpy()\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=0)\n",
-    "clf = LogisticRegression(random_state=0).fit(X_train, y_train)\n",
-    "clf.score(X_test, y_test)\n"
+    "clf = SGDClassifier(loss=\"log\", penalty=\"l2\", max_iter=1000)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03:59:59\n"
+     ]
+    }
+   ],
+   "source": [
+    "#'04:00:00' to int\n",
+    "def time_to_int(time):\n",
+    "    #convert time to int\n",
+    "    #input time format: '04:00:00'\n",
+    "    #output int\n",
+    "    h, m, s = time.split(':')\n",
+    "    return int(h) * 3600 + int(m) * 60 + int(s)\n",
+    "\n",
+    "#int to '04:00:00'\n",
+    "def int_to_time(i):\n",
+    "    #convert int to time\n",
+    "    #input int\n",
+    "    #output time format: '04:00:00'\n",
+    "    h = i // 3600\n",
+    "    m = (i - h * 3600) // 60\n",
+    "    s = i - h * 3600 - m * 60\n",
+    "    return '%02d:%02d:%02d' % (h, m, s)\n",
+    "\n",
+    "#convert time to int\n",
+    "a = time_to_int('04:00:00')\n",
+    "a -= 1\n",
+    "print(int_to_time(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
